--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     background:linear-gradient(145deg,#d0d1d3, #82a4c9,#d0d1d3,#2C74B3);;
     width:70%;
     margin-left: 15%;
-    scroll-behavior: smooth;
     position: fixed;
   }
    
@@ -35,15 +34,42 @@
   }
   a.navbar-brand {
     color: #454545; 
-    object-fit:contain;
-    mix-blend-mode: color-burn;
     font-weight: 700;
+ }
+
+  .navbar-brand p{
+
+    position: absolute; 
+    margin-top: -18px;
+    font-size: 25px;
 
   }
 
-  .nav-backgorund{
+  .row{
     background-image: linear-gradient(45deg,#301E67,#5B8FB9,#301E67);
-    width: 100%;
     height: 600px;
+    width:100%;
   }
  
+  #main-head{
+    margin-left: 50px;
+    margin-top: 200px;
+    font-weight: 900;
+    text-shadow: 2px 2px 4px white;
+    font-family:var(--font-family-display,"Charlie Display",sans-serif);
+    line-height: 1.5;
+  }
+
+  #sub-head{
+    margin-left: 90px;
+    margin-top: 35px;
+    font-size: 28px;
+    font-weight: bold;
+    text-shadow: 0px 4px 8px black ;
+    color: aliceblue;
+    font-family:var(--font-family-display,"Charlie Display",sans-serif);
+  } 
+
+#main-pic{
+  margin-top:215px ;
+} 
