--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
 
+*{
+  font-family: 'Alegreya', serif;
+}
 .row{
   width: 100% !important;
 }
